[gd_scene load_steps=6 format=4 uid="uid://d161xee5m0kkw"]

[ext_resource type="Script" uid="uid://b11bfoytp6n75" path="res://Prefab/TowerDefense/Sun/Brain/TowerDefenseBrainSun.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://1bpoi0mgrvd7" path="res://Asset/Anime/Effect/Sun/SunBrain/SunBrain.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://bhh76tmil13cb" path="res://Script/Component/MoveComponent/MoveComponent.tscn" id="3"]

[sub_resource type="Gradient" id="Gradient_plw53"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cipkv"]
gradient = SubResource("Gradient_plw53")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.7, 0.7)

[node name="TowerDefenseBrainSun" type="Node2D"]
physics_interpolation_mode = 1
z_index = 1000
script = ExtResource("1")

[node name="SunSprite" parent="." node_paths=PackedStringArray("layerSprite") instance=ExtResource("2")]
unique_name_in_owner = true
trueFrameRate = 30.0
layerSprite = [null, null, null, null]

[node name="Light" type="PointLight2D" parent="SunSprite"]
unique_name_in_owner = true
visible = false
energy = 0.5
texture = SubResource("GradientTexture2D_cipkv")

[node name="MoveComponent" parent="SunSprite" instance=ExtResource("3")]
unique_name_in_owner = true

[node name="DieDownTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 15.0
one_shot = true
autostart = true

[connection signal="timeout" from="DieDownTimer" to="." method="DieDown"]
